--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Porfolio",
+  "name": "porfolio",
   "version": "0.1.0",
   "private": false,
   "author": "Almaz Dolubaev",
@@ -21,8 +21,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "predeploy": "npm run build"
+ 
   },
   "devDependencies": {
     "gh-pages": "^1.1.0",
